--- a/week5/MyMemo2/app/src/main/res/layout/recyclerveiw_item.xml
+++ b/week5/MyMemo2/app/src/main/res/layout/recyclerveiw_item.xml
@@ -5,22 +5,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+
 
         <TextView
             android:id="@+id/memoText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Hello WorldHello World"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
             android:textSize="20sp"
-            app:layout_constraintHorizontal_chainStyle="spread_inside"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -36,6 +32,6 @@
         <!--            app:layout_constraintStart_toEndOf="@+id/Text"-->
         <!--            app:layout_constraintTop_toTopOf="parent"/>-->
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
