--- a/week5/MyMemo2/app/src/main/res/layout/recyclerveiw_item.xml
+++ b/week5/MyMemo2/app/src/main/res/layout/recyclerveiw_item.xml
@@ -3,7 +3,7 @@
     android:id = "@+id/rootRecyclerview"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
 
 
@@ -16,7 +16,7 @@
             android:layout_marginLeft="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
-            android:textSize="20sp"
+            android:textSize="40sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
