--- a/week02_bottom_navigation/BottomNavigation Template/app/src/main/res/layout/fragment_home.xml
+++ b/week02_bottom_navigation/BottomNavigation Template/app/src/main/res/layout/fragment_home.xml
@@ -88,7 +88,8 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/storyRecyclerview" />
+                app:layout_constraintTop_toBottomOf="@+id/storyRecyclerview"
+                tools:listitem="@layout/item_post"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.core.widget.NestedScrollView>
