--- a/week02_bottom_navigation/BottomNavigation Template/app/src/main/res/layout/fragment_profile.xml
+++ b/week02_bottom_navigation/BottomNavigation Template/app/src/main/res/layout/fragment_profile.xml
@@ -54,7 +54,7 @@
         android:layout_height="100dp"
         app:srcCompat="@drawable/ic_profile_default"
         android:background="@android:color/transparent"
-        app:layout_constraintBottom_toTopOf="@id/info"
+        app:layout_constraintBottom_toTopOf="@id/name"
         app:layout_constraintEnd_toStartOf="@id/postCount"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/userId"
@@ -64,7 +64,7 @@
     android:id="@+id/postCount"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    app:layout_constraintBottom_toTopOf="@id/info"
+    app:layout_constraintBottom_toTopOf="@id/name"
     app:layout_constraintEnd_toStartOf="@id/followerCount"
     app:layout_constraintStart_toEndOf="@id/profile"
     app:layout_constraintTop_toBottomOf="@id/userId"
@@ -90,7 +90,7 @@
         android:id="@+id/followerCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@id/info"
+        app:layout_constraintBottom_toTopOf="@id/name"
         app:layout_constraintEnd_toStartOf="@id/followingCount"
         app:layout_constraintStart_toEndOf="@id/postCount"
         app:layout_constraintTop_toBottomOf="@id/userId"
@@ -114,7 +114,7 @@
         android:id="@+id/followingCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@id/info"
+        app:layout_constraintBottom_toTopOf="@id/name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/followerCount"
         app:layout_constraintTop_toBottomOf="@id/userId"
@@ -137,15 +137,27 @@
     </androidx.appcompat.widget.LinearLayoutCompat>
 
     <TextView
-        android:id="@+id/info"
+        android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="16sp"
         android:text="가천대학교 UMC 3기 안드로이드"
-        app:layout_constraintBottom_toTopOf="@id/editPro"
+        app:layout_constraintBottom_toTopOf="@+id/info"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/profile"
+        android:layout_marginStart="20dp"
+        />
+    <TextView
+        android:id="@+id/info"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="16sp"
+        android:text="설명"
+        app:layout_constraintBottom_toTopOf="@id/editPro"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/name"
         android:layout_marginStart="20dp"
         />
     <androidx.appcompat.widget.AppCompatButton
