week6 프로필 화면 하단 탭부분 완성 + 홈 화면 스토리 리스트 부분 구현

--- a/week02_bottom_navigation/BottomNavigation Template/app/src/main/res/layout/item_newstory.xml
+++ b/week02_bottom_navigation/BottomNavigation Template/app/src/main/res/layout/item_newstory.xml
@@ -10,27 +10,29 @@
         android:id="@+id/frame"
         android:layout_width="75dp"
         android:layout_height="wrap_content"
-
         android:layout_marginTop="12dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/name"
-        android:layout_gravity="center">
+
+        >
 
         <ImageView
             android:id="@+id/profileImg"
             android:layout_width="65dp"
-            android:layout_height="65dp"
+            android:layout_height="75dp"
             android:src="@drawable/ic_profile_default"
             android:translationX="5.5dp"
             android:translationY="4.5dp" />
 
         <ImageView
             android:id="@+id/border"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
-            android:src="@drawable/ic_story_border" />
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:src="@drawable/ic_story_add"
+            android:layout_gravity="bottom|right"
+            />
 
     </FrameLayout>
 
@@ -41,7 +43,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:gravity="center"
-        android:text="Test 1"
+        android:text="내 스토리"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
