--- a/week02_bottom_navigation/BottomNavigation Template/app/src/main/res/layout/fragment_profile.xml
+++ b/week02_bottom_navigation/BottomNavigation Template/app/src/main/res/layout/fragment_profile.xml
@@ -166,7 +166,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:backgroundTint="#D5D6D6"
+        android:backgroundTint="#ECECEC"
         android:paddingStart="130dp"
         android:paddingEnd="130dp"
         android:text="프로필 편집"
@@ -181,19 +181,20 @@
         android:id="@+id/recomFriend"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        app:srcCompat="@drawable/ic_recommend_friend"
+        android:backgroundTint="#ECECEC"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toTopOf="@id/midConstraint"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/editPro"
-        app:layout_constraintTop_toBottomOf="@id/info" />
+        app:layout_constraintTop_toBottomOf="@id/info"
+        app:srcCompat="@drawable/ic_recommend_friend" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/midConstraint"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom = "10dp"
-        app:layout_constraintBottom_toTopOf="@id/sixthConstraint"
+
+        app:layout_constraintBottom_toTopOf="@id/sixthLinear"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/editPro">
@@ -205,7 +206,8 @@
             android:layout_marginStart="20dp"
             android:text="스토리 하이라이트"
             android:textColor="@color/black"
-            android:textSize="16sp"
+            android:textSize="14sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@id/midConstraint"
             app:layout_constraintEnd_toStartOf="@id/arrowBtm"
             app:layout_constraintHorizontal_chainStyle="spread_inside"
@@ -216,7 +218,7 @@
             android:id="@+id/arrowBtm"
             android:layout_width="25dp"
             android:layout_height="25dp"
-            android:layout_marginEnd="25dp"
+            android:layout_marginEnd="15dp"
             android:background="@android:color/transparent"
             app:layout_constraintBottom_toBottomOf="@id/midConstraint"
             app:layout_constraintEnd_toEndOf="@id/midConstraint"
@@ -226,40 +228,36 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/sixthConstraint"
+    <LinearLayout
+        android:id="@+id/sixthLinear"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/midConstraint"
+        app:layout_constraintBottom_toTopOf="@id/tab_layout"
+        android:orientation="vertical"
+        android:layout_marginStart="20dp"
         >
-<!--    <ImageButton-->
-<!--        android:id="@+id/postGrid"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        app:srcCompat="@drawable/ic_postgrid"-->
-<!--        android:background="@android:color/transparent"-->
-<!--        app:layout_constraintEnd_toStartOf="@id/infoTag"-->
-<!--        app:layout_constraintStart_toStartOf="@id/sixthConstraint"-->
-<!--        app:layout_constraintTop_toTopOf="@id/sixthConstraint"-->
 
-<!--        app:layout_constraintHorizontal_chainStyle="spread"-->
-<!--        android:layout_marginEnd="50dp"-->
-<!--        />-->
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="좋아하는 스토리를 프로필에 보관해보세요"
+            android:textColor="#000000" />
 
-<!--    <ImageButton-->
-<!--        android:id="@+id/infoTag"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        app:srcCompat="@drawable/ic_myinfo_tag"-->
-<!--        android:background="@android:color/transparent"-->
-
-<!--        app:layout_constraintEnd_toEndOf="@id/sixthConstraint"-->
-<!--        app:layout_constraintStart_toEndOf="@id/postGrid"-->
-<!--        app:layout_constraintTop_toTopOf="@id/sixthConstraint"-->
-<!--        />-->
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/highlightRecyclerview"
+            android:layout_width="match_parent"
+            android:layout_height="120dp"
+            android:nestedScrollingEnabled="false"
+            app:layout_constraintBottom_toTopOf="@+id/postRecyclerview"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:listitem="@layout/item_newhighlight" />
+    </LinearLayout>
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tab_layout"
@@ -267,7 +265,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/midConstraint"
+        app:layout_constraintTop_toBottomOf="@+id/sixthLinear"
         app:layout_constraintBottom_toTopOf="@+id/view_pager"
 
         app:tabIndicatorColor="@color/black"/>
