--- a/week02_bottom_navigation/BottomNavigation Template/app/src/main/res/layout/item_story.xml
+++ b/week02_bottom_navigation/BottomNavigation Template/app/src/main/res/layout/item_story.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:layout_marginHorizontal="2dp"
@@ -18,11 +19,14 @@
         app:layout_constraintBottom_toTopOf="@+id/name"
         android:layout_gravity="center">
 
-        <ImageView
+        <ImageButton
             android:id="@+id/profileImg"
             android:layout_width="65dp"
             android:layout_height="65dp"
-            android:src="@drawable/ic_profile_default"
+            app:srcCompat="@drawable/ic_profile_default"
+            android:background="@android:color/transparent"
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"
             android:translationX="5.5dp"
             android:translationY="4.5dp" />
 
