--- a/week02_bottom_navigation/BottomNavigation Template/app/src/main/res/layout/activity_login.xml
+++ b/week02_bottom_navigation/BottomNavigation Template/app/src/main/res/layout/activity_login.xml
@@ -65,7 +65,7 @@
     android:layout_width="300dp"
     android:layout_height="50dp"
     android:layout_marginBottom="16dp"
-    app:layout_constraintBottom_toTopOf="@+id/button"
+    app:layout_constraintBottom_toTopOf="@+id/btnLogin"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/id"
@@ -81,7 +81,8 @@
         android:padding="10dp"
         android:textColor="#000000"
         android:textColorHint="#A4A4A4"
-        android:textSize="12sp" />
+        android:textSize="12sp"
+        android:inputType="textPassword"/>
 
     <ImageButton
         android:id="@+id/btnHidepwd"
@@ -96,7 +97,7 @@
 
   </FrameLayout>
   <androidx.appcompat.widget.AppCompatButton
-      android:id="@+id/button"
+      android:id="@+id/btnLogin"
       android:layout_width="300dp"
       android:layout_height="50dp"
       android:layout_marginBottom="16dp"
@@ -118,7 +119,7 @@
       app:layout_constraintBottom_toTopOf="@+id/linearLayout"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/button">
+      app:layout_constraintTop_toBottomOf="@+id/btnLogin">
 
     <TextView
         android:id="@+id/textView3"
@@ -131,7 +132,8 @@
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="로그인 도움말 보기"
+        android:paddingStart="5dp"
+        android:text="로그인 도움말 보기."
         android:textColor="#000000"
         android:textSize="10sp"
         android:textStyle="bold" />
@@ -207,7 +209,7 @@
       android:id="@+id/view7"
       android:layout_width="0dp"
       android:layout_height="1dp"
-      android:layout_marginTop="150dp"
+      android:layout_marginTop="200dp"
       android:layout_marginBottom="10dp"
       android:background="#BABABA"
       app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
@@ -244,6 +246,7 @@
         android:layout_height="wrap_content"
         android:paddingTop="10dp"
         android:paddingBottom="20dp"
+        android:paddingStart="5dp"
         android:text="가입하기."
         android:textColor="#000000"
         android:textSize="10sp"
