--- a/week02_bottom_navigation/BottomNavigation Template/app/src/main/res/layout/activity_sgin_pwd.xml
+++ b/week02_bottom_navigation/BottomNavigation Template/app/src/main/res/layout/activity_sgin_pwd.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Sgin.SginNameFragment"
-    android:orientation="vertical"
-    android:gravity="center_horizontal">
-
+    tools:context=".SginPwdActivity"
+    android:gravity="center_horizontal"
+    android:orientation="vertical">
     <TextView
         android:id="@+id/textView12"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="사용자 이름 선택"
+        android:text="비밀번호 만들기"
         android:textColor="#000000"
         android:textSize="28sp"
         android:textStyle="bold"
@@ -21,29 +21,30 @@
         android:id="@+id/textView13"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="나중에 언제든지 변경할 수 있습니다" />
+        android:text="보안을 위해 비밀번호는 6자 이상이어야 합니다" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
+        android:id="@+id/sginPwd"
         android:layout_width="350dp"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
         android:background="@drawable/edittext_border2"
-        android:hint="사용자 이름"
+        android:hint="비밀번호"
+        android:inputType="textPassword"
         android:padding="10dp"
         android:textColor="#000000"
         android:textColorHint="#A4A4A4"
         android:textSize="12sp"
-         />
+        />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/button2"
+        android:id="@+id/sginPwdBtn"
         android:layout_width="350dp"
         android:layout_height="50dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/loginbtn_off"
-        android:text="로그인"
+        android:text="다음"
         android:textColor="#FFFFFF"
         android:textSize="12sp" />
 </LinearLayout>
