--- a/week02_bottom_navigation/BottomNavigation Template/app/src/main/res/layout/activity_sgin_email.xml
+++ b/week02_bottom_navigation/BottomNavigation Template/app/src/main/res/layout/activity_sgin_email.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    tools:context=".SginEmailActivity"
     android:gravity="center_horizontal"
-    android:orientation="vertical"
-    tools:context=".Sgin.SginEmailFragment">
-
+    android:orientation="vertical">
     <TextView
         android:id="@+id/textView12"
         android:layout_width="wrap_content"
@@ -19,10 +18,18 @@
         android:textStyle="bold" />
 
 
+
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tab_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:tabIndicatorColor="@color/black"/>
+        app:tabIndicatorColor="@color/black"
+        app:tabSelectedTextColor="@color/black"/>
+
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/view_pager"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        />
 
 </LinearLayout>
