--- a/week02_bottom_navigation/BottomNavigation Template/app/src/main/res/layout/activity_profile_edit.xml
+++ b/week02_bottom_navigation/BottomNavigation Template/app/src/main/res/layout/activity_profile_edit.xml
@@ -119,7 +119,7 @@
                 android:id="@+id/infoTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="소개"
+                android:text="이름"
                 android:textSize="12sp" />
 
             <EditText
